--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- link css -->
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>htmlcss-struttura-discord</title>
 </head>
 
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="row navbar">
                 <div class="col-2">
-                    <img src="../assets/img/logo.svg" alt="Discord logo">
+                    <img src="./assets/img/logo.svg" alt="Discord logo">
                 </div>
                 <div class="col-8 tx_center">
                     <a href="#">Scarica</a>
@@ -58,7 +58,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-7">
-                        <img src="../assets/img/item1.svg" alt="immagine funzionamento gruppo di studio">
+                        <img src="./assets/img/item1.svg" alt="immagine funzionamento gruppo di studio">
                     </div>
                     <div class="col-5">
                         <h2>Un luogo ad invito con tutto lo spazio necessario per parlare</h2>
@@ -78,7 +78,7 @@
                             che sei li e unirsi istantaneamente senza dover chiamare</p>
                     </div>
                     <div class="col-7">
-                        <img src="../assets/img/item2.svg" alt="voice connected">
+                        <img src="./assets/img/item2.svg" alt="voice connected">
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-7">
-                        <img src="../assets/img/item3.svg" alt="coach">
+                        <img src="./assets/img/item3.svg" alt="coach">
                     </div>
                     <div class="col-5">
                         <h2>Da pochi a un fandom</h2>
@@ -106,7 +106,7 @@
                 <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in
                     video, guarda gli amici giocare in streaming, o riuniveti in una sesisone di disegno con la
                     condivisione schermo</p>
-                <img src="../assets/img/item4-big.svg" alt="videochiamata">
+                <img src="./assets/img/item4-big.svg" alt="videochiamata">
                 <div class="stars">
                     Pronto a iniziare la tua avventura?
                 </div>
@@ -122,14 +122,15 @@
             <div class="container footer_top">
                 <div class="row">
                     <div class="col-4">
-                        <div>
+                        <div class="footer_title text_purple">
                             <h2>Il tuo posto per parlare</h2>
                         </div>
-                        <div>
-                            <img src="../assets/img/ita.png" id="flag_italy" alt="Bandiera verde bianca rossa">
-                            <span>italiano<i class="fa-solid fa-chevron-down"></i></span>
+                        <div class="choose_lenguage">
+                            <img src="./assets/img/ita.png" id="flag_italy" alt="Bandiera verde bianca rossa">
+                            <span>italiano</span>
+                            <i class="fa-solid fa-chevron-down"></i>
                         </div>
-                        <div>
+                        <div class="social_link">
                             <i class="fa-brands fa-twitter"></i>
                             <i class="fa-brands fa-instagram"></i>
                             <i class="fa-brands fa-square-facebook"></i>
@@ -138,25 +139,25 @@
                     </div>
 
                     <div class="col-8">
-                        <div class="row">
-                            <div class="col-3">
-                                <a href="#">Prodotto</a>
+                        <div class="row ">
+                            <div class="col-3 list">
+                                <a href="#" class="text_purple">Prodotto</a>
                                 <a href="#">Scarica</a>
                                 <a href="#">Perché Discord</a>
                                 <a href="#">Nitro</a>
                                 <a href="#">Sicurezza</a>
                                 <a href="#">Assistenza</a>
                             </div>
-                            <div class="col-3">
-                                <a href="#">Compagnia</a>
+                            <div class="col-3 list">
+                                <a href="#" class="text_purple">Compagnia</a>
                                 <a href="#">Chi siamo</a>
                                 <a href="#">Lavora con noi</a>
                                 <a href="#">Marchio</a>
                                 <a href="#">Redazione</a>
                                 <a href="#">Negozio</a>
                             </div>
-                            <div class="col-3">
-                                <a href="#">Risorse</a>
+                            <div class="col-3 list">
+                                <a href="#" class="text_purple">Risorse</a>
                                 <a href="#">Scarica</a>
                                 <a href="#">Perché Discord</a>
                                 <a href="#">Nitro</a>
@@ -168,8 +169,8 @@
                                 <a href="#">Sicurezza</a>
                                 <a href="#">Assistenza</a>
                             </div>
-                            <div class="col-3">
-                                <a href="#">Norme</a>
+                            <div class="col-3 list">
+                                <a href="#" class="text_purple">Norme</a>
                                 <a href="#">Scarica</a>
                                 <a href="#">Perché Discord</a>
                                 <a href="#">Nitro</a>
@@ -184,8 +185,8 @@
         <!-- chiusura pagina -->
         <section>
             <div class="container footer_bottom">
-                <div class="img">Logo</div>
-                <button>Registrati</button>
+                <img src="./assets/img/logo.svg" alt="Discord logo">
+                <button class="btn purple">Registrati</button>
             </div>
         </section>
     </footer>
