--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
         </section>
         <!-- sub section Talk_Space -->
-        <section class="sub_section background_white" id="talk_spac">
+        <section class="sub_section background_white" id="talk_space">
             <div class="container">
                 <div class="row">
                     <div class="col-7">
@@ -134,7 +134,7 @@
                             <i class="fa-brands fa-twitter"></i>
                             <i class="fa-brands fa-instagram"></i>
                             <i class="fa-brands fa-square-facebook"></i>
-                            <i class="fa-brands fa-square-youtube"></i>
+                            <i class="fa-brands fa-youtube"></i>
                         </div>
                     </div>
 
