--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 </div>
             </div>
         </section>
+
         <!-- sub section Talk_Space -->
         <section class="sub_section background_white" id="talk_space">
             <div class="container">
@@ -68,6 +69,8 @@
                 </div>
             </div>
         </section>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 230"><path fill="#F6F6F6" fill-opacity="1" d="M0,160L60,176C120,192,240,224,360,202.7C480,181,600,107,720,90.7C840,75,960,117,1080,154.7C1200,192,1320,224,1380,240L1440,256L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
+      
         <!-- sub section  Easy_Find -->
         <section class="sub_section background_grey" id="easy_find">
             <div class="container">
@@ -83,6 +86,7 @@
                 </div>
             </div>
         </section>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 230"><path fill="#F6F6F6" fill-opacity="1" d="M0,160L60,176C120,192,240,224,360,202.7C480,181,600,107,720,90.7C840,75,960,117,1080,154.7C1200,192,1320,224,1380,240L1440,256L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
         <!-- sub section Fandom -->
         <section class="sub_section background_white" id="fandom">
             <div class="container">
@@ -99,6 +103,7 @@
                 </div>
             </div>
         </section>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 230"><path fill="#F6F6F6" fill-opacity="1" d="M0,160L60,176C120,192,240,224,360,202.7C480,181,600,107,720,90.7C840,75,960,117,1080,154.7C1200,192,1320,224,1380,240L1440,256L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
         <!-- sub section Keep_in_Touch -->
         <section class="sub_section background_grey" id="keep_in_touch">
             <div class="container tx_center">
